--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,6 @@
   font-family: "Teko", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  background-color: #0F0F0F;
+  /* background-color: #0F0F0F; */
   color: white;
 }
