--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,8 +1,12 @@
 .home-main {
     height: calc(100dvh - 71px);
     width: 100dvw;
-    background-color: grey;
     display: flex;
+    overflow-x: hidden;
+    background-image: url("../../assets/coder.png");
+    background-size: cover;
+    background-position: center; /* Center the background horizontally */
+    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
 }
 
 .main-left {
