--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,6 +1,6 @@
 .about-main {
     height: calc(100dvh - 71px);
-    width: 100dvw;
+    width: 100%;
     background-color: #0F0F0F;
     display: flex;
     overflow-x: hidden;
@@ -37,7 +37,9 @@
 
 .ar-top p {
     font-size: 22px;
+    display: flex;
     flex-wrap: wrap;
+    padding: 10px;
 }
 
 .ar-bottom {
@@ -50,9 +52,53 @@
     gap: 15px;
 }
 
-.ar-bottom li {
+.about-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    list-style: none;
+    font-size: 30px;
+}
+
+.about-list li {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width:450px) {
+    .about-main{
+        flex-direction: column;
+    }
+    .about-left{
+        height: 40%;
+        width: 100%;
+    }
+    .about-right{
+        height: 60%;
+        width: 100%;
+    }
+    .about-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 25px;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+    }
+    .about li {
+        flex-direction: row;
+    }
+    .ar-top p {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 10px;
+    }
+    .coder2{
+        height: 300px;
+        width: 300px;
+    }
 }
