--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,6 +1,6 @@
 .home-main {
     height: calc(100dvh - 71px);
-    width: 100dvw;
+    width: 100%;
     display: flex;
     overflow-x: hidden;
     background-image: url("../../assets/coder.png");
@@ -88,7 +88,7 @@ img{
         height: 50%;
         width: 100%;
     }
-    img {
+    .coder1 {
         height: 400px;
         width: 400px;
     }
