--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -71,8 +71,21 @@
     text-align: left;
     width: 100%;
     border-radius: 12px;
+    color: #0F0F0F;
 }
 
+.contact-form textarea {
+    border: 1px solid ;
+    font-size: 18px;
+    font-weight: 400;
+    height: 80px;
+    outline: none;
+    padding: 6px 12px 6px 15px;
+    text-align: left;
+    width: 100%;
+    border-radius: 12px;
+    color: #0F0F0F;
+}
 .contact-form button {
     border: 1px solid ;
     font-size: 18px;
