--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -38,8 +38,14 @@
     padding: 5px;
     border-radius: 12px;
     font-size: 20px;
+    cursor: pointer;
+    border: 1px solid;
 }
 
+.main-left button:hover {
+    background-color: #0f0f0f;
+    color: white;
+}
 .main-socials {
     display: flex;
     gap: 20px;
@@ -52,6 +58,7 @@
     width: 30px;
     cursor: pointer;
 }
+
 p {
     font-size: 30px;
 }
