--- a/src/pages/contact/Contact.css
+++ b/src/pages/contact/Contact.css
@@ -96,8 +96,13 @@
     width: 100%;
     border-radius: 12px;
     color: #0F0F0F;
+    cursor: pointer;
 }
 
+.contact-form button:hover {
+    background-color: #0F0F0F;
+    color: white;
+}
 @media (max-width:450px) {
     .contact-main{
         flex-direction: column;
