--- a/src/pages/projects/Projects.css
+++ b/src/pages/projects/Projects.css
@@ -32,3 +32,17 @@
     object-fit: cover;
     object-position: left;
 }
+
+@media (max-width:450px) {
+    .projects-main{
+        flex-direction: column;
+    }
+    .project-card{
+        height: 230px;
+        width: 230px;
+    }
+    .card-img{
+        height: 220px;
+        width: 220px;
+    }
+}
