--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
-body::-webkit-scrollbar {
+/* body::-webkit-scrollbar {
   width: 7px;
   height: 7px;
 }
 
 body::-webkit-scrollbar-thumb {
   background-color: #0f0f0f;
-  /* border-radius: 4px; */
 }
 
 body::-webkit-scrollbar-thumb:hover {
   background-color: #6b6a6a;
-}
+} */
