--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400..800&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Teko", sans-serif;
+  font-family: "Wix Madefor Display", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  /* background-color: #0F0F0F; */
-  color: white;
+  /* background: #c7ebfb; */
+  color: #0f0f0f;
+}
+
+a {
+  text-decoration: none;
 }
